Criação de páginas

--- a/cardapio.html
+++ b/cardapio.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Personal CSS -->
-    <link rel="stylesheet" href="personal_css/blobal.css" type="text/css">
-    <link rel="stylesheet" href="personal_css/index.css" type="text/css">
+    <link rel="stylesheet" href="personal_css/style.css" type="text/css">
 
     <!-- Optional Scripts -->
     <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
@@ -35,7 +34,7 @@
         });
     </script>
 
-    <title>Le Pain</title>
+    <title>Cardápio</title>
 </head>
 
 <body>
@@ -65,13 +64,13 @@
             <div id="navbar" class="col-10 pl-auto mt-5">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-site-active" href="index.html">Início</a>
+                        <a class="nav-link nav-link-site" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-link-site" href="sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
+                        <a class="nav-link nav-link-site-active" href="cardapio.html">Cardápio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-link-site" href="#">Curiosidades</a>
@@ -83,7 +82,7 @@
 
         <div id="title" class="row col-10 col-md-10 mx-auto my-5">
             <h1 class="display-3 mx-auto text-center text-white"><strong>Massas Artesanais</strong><br> <a
-                    class="scroll" href="#content"><i class="fas fa-arrow-down mt-5 fa-xs text-site"></i></a></h1>
+                    class="scroll" href="#content"><i class="fas fa-arrow-down mt-5 fa-xs text-success"></i></a></h1>
         </div>
 
     </section>
@@ -107,7 +106,7 @@
                             encomenda</strong></h2>
                     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
                         conteúdo do card.</p>
-                    <a class="btn text-white bg-site rounded my-auto py-auto px-5"
+                    <a class="btn btn-success rounded my-auto py-auto px-5"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !">
                         <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
                 </div>
