--- a/sobre.html
+++ b/sobre.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Personal CSS -->
-    <link rel="stylesheet" href="personal_css/blobal.css" type="text/css">
-    <link rel="stylesheet" href="personal_css/index.css" type="text/css">
+    <link rel="stylesheet" href="personal_css/global.css" type="text/css">
+    <link rel="stylesheet" href="personal_css/about.css" type="text/css">
 
     <!-- Optional Scripts -->
     <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
@@ -35,26 +35,12 @@
         });
     </script>
 
-    <title>Le Pain</title>
+    <title>Sobre</title>
 </head>
 
 <body>
 
     <section id="presentation" class="d-block size-page">
-
-        <div id="carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/croissant_aberto.png" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/pain_au_chocolat.png" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/novo_experimento.png" alt="Third slide">
-                </div>
-            </div>
-        </div>
 
         <div id="perfilNavbar" class="row col-12 d-flex">
 
@@ -68,7 +54,7 @@
                         <a class="nav-link nav-link-site-active" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="sobre.html">Sobre</a>
+                        <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
@@ -81,37 +67,21 @@
 
         </div>
 
-        <div id="title" class="row col-10 col-md-10 mx-auto my-5">
-            <h1 class="display-3 mx-auto text-center text-white"><strong>Massas Artesanais</strong><br> <a
-                    class="scroll" href="#content"><i class="fas fa-arrow-down mt-5 fa-xs text-site"></i></a></h1>
-        </div>
+        <div id="about" class="row">
 
-    </section>
-
-    <section id="content">
-
-        <!-- About -->
-        <div id="about" class="col-md-11 mx-auto my-5">
-
-            <div class="row">
-
-                <!-- Image -->
-                <div class="col-11 col-md-3 mx-auto">
-                    <img class="col-inner rounded" src="images/croissant_story.png" alt="croissant_story">
+            <!-- Image -->
+            <div class="col-11 col-md-6 mx-auto my-auto">
+                <div class="col-11 col-md-3">
+                    <img class="col-inner rounded px-auto" src="images/croissant_story.png" alt="croissant_story">
                 </div>
+            </div>
 
-                <!-- Text -->
-                <div class="col-11 col-md-6 mr-auto my-auto ">
-                    <h6 class="card-subtitle mb-2 text-muted">SOBRE</h6>
-                    <h2 class="card-title"><strong>Pães caseiros sem conservantes e sob
-                            encomenda</strong></h2>
-                    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
-                        conteúdo do card.</p>
-                    <a class="btn text-white bg-site rounded my-auto py-auto px-5"
-                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !">
-                        <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
-                </div>
-
+            <!-- Text -->
+            <div class="col-11 col-md-6 mx-auto my-auto ">
+                <h2 class="card-title text-site"><strong>Pães caseiros sem conservantes e sob
+                        encomenda</strong></h2>
+                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
+                    conteúdo do card.</p>
             </div>
 
         </div>
