--- a/sobre.html
+++ b/sobre.html
@@ -51,7 +51,7 @@
             <div id="navbar" class="col-10 pl-auto mt-5">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-site-active" href="index.html">Início</a>
+                        <a class="nav-link nav-link-site" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
