--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
                     aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon text-site">Menu</span>
+                    <span class="text-site"><i class="fas fa-bars mr-2 text-site"></i>Menu</span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSite">
