--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,8 @@
 
     <!-- Optional Scripts -->
     <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
-    <script type="text/javascript" src="js/jquery-3.5.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
@@ -42,46 +43,61 @@
 
     <section id="presentation" class="d-block size-page">
 
+        <!-- Perfil and Navbar-->
         <div id="perfilNavbar" class="row col-12 d-flex">
 
+            <!-- Perfil -->
             <div id="perfil" class="row col-2 pl-4 pr-auto pt-3 pb-auto">
                 <img src="./images/logo.png" alt="logo">
             </div>
 
-            <div id="navbar" class="col-10 pl-auto mt-5">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="index.html">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="#">Curiosidades</a>
-                    </li>
-                </ul>
-            </div>
+            <!-- Navbar -->
+            <nav id="navbar" class="col-10 ml-auto my-auto navbar navbar-expand-lg">
+
+                <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
+                    aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="text-site"><i class="fas fa-bars mr-2 text-site"></i>Menu</span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSite">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="#">Curiosidades</a>
+
+                    </ul>
+                </div>
+
+            </nav>
 
         </div>
 
-        <div id="about" class="row">
+        <!-- About -->
+        <div id="about" class="col-12 col-md-11 mx-auto my-5 py-5">
 
-            <!-- Image -->
-            <div class="col-11 col-md-6 mx-auto my-auto">
-                <div class="col-11 col-md-3">
-                    <img class="col-inner rounded px-auto" src="images/croissant_story.png" alt="croissant_story">
+            <div class="row">
+
+                <!-- Image -->
+                <div class="col-12 col-md-5 mx-auto my-auto">
+                    <img class="col-inner rounded shadow-sm" src="images/novo_experimento_2.png" alt="croissant_story">
                 </div>
-            </div>
 
-            <!-- Text -->
-            <div class="col-11 col-md-6 mx-auto my-auto ">
-                <h2 class="card-title text-site"><strong>Pães caseiros sem conservantes e sob
-                        encomenda</strong></h2>
-                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
-                    conteúdo do card.</p>
+                <!-- Text -->
+                <div class="col-12 col-md-6 ml-auto my-auto ">
+                    <h2 class="card-title text-site"><strong>Pães caseiros sem conservantes e sob
+                            encomenda</strong></h2>
+                    <p class="card-text text-white">Um exemplo de texto rápido para construir o título do card e fazer preencher o
+                        conteúdo do card.</p>
+                </div>
+
             </div>
 
         </div>
