--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <!-- Navbar -->
-            <nav id="navbar" class="col-10 ml-auto my-auto navbar navbar-expand-lg">
+            <nav id="navbar" class="col-6 col-md-10 text-right ml-auto my-auto navbar navbar-expand-lg">
 
                 <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
                     aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,21 +93,24 @@
 
         </div>
 
-        <div id="title" class="d-block col-10 row col-10 mx-auto my-5"">
-            <h1 class=" d-none d-md-block col-10 display-3 mx-auto text-center text-white"><strong>Massas
-                Artesanais</strong>
+        <hr class="d-sm-none col-11 bg-white">
+
+        <div id="title" class="d-block col-10 row col-10 mx-auto my-5">
+            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white"><strong>Massas
+                    Artesanais</strong>
             </h1>
             <h1 class="d-sm-none col-10 mx-auto text-center text-white"><strong>Massas Artesanais</strong></h1>
-            <a class="row col-1 scroll mx-auto mt-5" href="#content""><i
+            <a class="row col-4 col-md-1 scroll mx-auto mt-5" href="#content"><i
                     class=" mx-auto fas fa-arrow-down fa-4x text-site"></i></a>
         </div>
+
 
     </section>
 
     <section id="content">
 
         <!-- About -->
-        <div id="about" class="col-12 col-md-11 mx-auto my-5 py-5">
+        <div id="about" class="col-11 mx-auto my-5 py-5">
 
             <div class="row">
 
@@ -126,6 +129,55 @@
                     <a class="btn text-white py-3 bg-site px-5"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !">
                         <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- Curiosities -->
+        <div id="curiosities" class="col-12 mx-auto-my-5-py-5">
+
+            <div class="row mx-auto">
+
+                <div class="col-md-4 hoverzoom mx-auto my-2">
+                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
+                    <div class="retina">
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
+                            temporibus,
+                            repellat? Placeat nihil itaque culpa eu.</p>
+                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 hoverzoom mx-auto my-2">
+                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
+                    <div class="retina">
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
+                            temporibus,
+                            repellat? Placeat nihil itaque culpa eu.</p>
+                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 hoverzoom mx-auto my-2">
+                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
+                    <div class="retina">
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
+                            temporibus,
+                            repellat? Placeat nihil itaque culpa eu.</p>
+                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 hoverzoom mx-auto my-2">
+                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
+                    <div class="retina">
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
+                            temporibus,
+                            repellat? Placeat nihil itaque culpa eu.</p>
+                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
+                    </div>
                 </div>
 
             </div>
