Criação de conteúdo e implementação de Levitate

--- a/cardapio.html
+++ b/cardapio.html
@@ -14,11 +14,13 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Personal CSS -->
-    <link rel="stylesheet" href="personal_css/style.css" type="text/css">
+    <link rel="stylesheet" href="personal_css/global.css" type="text/css">
+    <link rel="stylesheet" href="personal_css/cardapio.css" type="text/css">
 
     <!-- Optional Scripts -->
     <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
-    <script type="text/javascript" src="js/jquery-3.5.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
@@ -41,79 +43,127 @@
 
     <section id="presentation" class="d-block size-page">
 
-        <div id="carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/croissant_aberto.png" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/pain_au_chocolat.png" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/novo_experimento.png" alt="Third slide">
-                </div>
-            </div>
-        </div>
-
+        <!-- Perfil and Navbar-->
         <div id="perfilNavbar" class="row col-12 d-flex">
 
+            <!-- Perfil -->
             <div id="perfil" class="row col-2 pl-4 pr-auto pt-3 pb-auto">
                 <img src="./images/logo.png" alt="logo">
             </div>
 
-            <div id="navbar" class="col-10 pl-auto mt-5">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="index.html">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="sobre.html">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site-active" href="cardapio.html">Cardápio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="#">Curiosidades</a>
-                    </li>
-                </ul>
-            </div>
+            <!-- Navbar -->
+            <nav id="navbar" class="col-6 col-md-10 text-right ml-auto my-auto navbar navbar-expand-lg">
+
+                <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
+                    aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="text-site"><i class="fas fa-bars mr-2 text-site"></i>Menu</span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSite">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="sobre.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site-active" href="cardapio.html">Cardápio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="#">Curiosidades</a>
+                    </ul>
+                </div>
+
+            </nav>
+
+            <hr class="d-sm-none col-12 bg-white">
 
         </div>
-
-        <div id="title" class="row col-10 col-md-10 mx-auto my-5">
-            <h1 class="display-3 mx-auto text-center text-white"><strong>Massas Artesanais</strong><br> <a
-                    class="scroll" href="#content"><i class="fas fa-arrow-down mt-5 fa-xs text-success"></i></a></h1>
-        </div>
-
-    </section>
-
-    <section id="content">
 
         <!-- About -->
-        <div id="about" class="col-md-11 mx-auto my-5">
+        <div id="about" class="col-11 mx-auto my-5 py-5">
 
             <div class="row">
 
                 <!-- Image -->
-                <div class="col-11 col-md-3 mx-auto">
-                    <img class="col-inner rounded" src="images/croissant_story.png" alt="croissant_story">
+                <div class="col-12 col-md-5 mx-auto mt-auto mb-3">
+                    <img class="col-inner rounded shadow-sm" src="images/novo_experimento_2.png" alt="croissant_story">
                 </div>
 
                 <!-- Text -->
-                <div class="col-11 col-md-6 mr-auto my-auto ">
-                    <h6 class="card-subtitle mb-2 text-muted">SOBRE</h6>
-                    <h2 class="card-title"><strong>Pães caseiros sem conservantes e sob
-                            encomenda</strong></h2>
-                    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
-                        conteúdo do card.</p>
-                    <a class="btn btn-success rounded my-auto py-auto px-5"
-                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !">
-                        <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
+                <div class="col-12 col-md-6 ml-auto my-auto">
+                    <h2 class="card-title text-site"><strong>Cardápio</strong></h2>
+                    <p class="card-text text-white">Vendemos em Kits. O limite mínimo de peças varia por "Kit",
+                        <strong>Não</strong> temos limite máximo de peças.</p>
                 </div>
 
             </div>
 
         </div>
+
+    </section>
+
+    <section id="content" class="bg-white-site my-5">
+
+        <!-- Cards -->
+        <div id="cardapio" class="col-11 mx-auto my-5 py-5">
+
+            <div class="row">
+
+                <div class="col-sm-12 col-md-4 mx-auto mb-5">
+                    <div class="card my-3 levitate">
+                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <div class="card-body">
+                            <h5 class="card-title">Pão Árabe</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
+                            <p class="card-text">Pão Árabe 80g.</p>
+                            <a class="card-link text-site float-right" href="#">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-4 mx-auto mb-5">
+                    <div class="card my-3 levitate">
+                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <div class="card-body">
+                            <h5 class="card-title">Pão Árabe</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
+                            <p class="card-text">Pão Árabe 80g.</p>
+                            <a class="card-link text-site float-right" href="#">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-4 mx-auto mb-5">
+                    <div class="card my-3 levitate">
+                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <div class="card-body">
+                            <h5 class="card-title">Pão Árabe</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
+                            <p class="card-text">Pão Árabe 80g.</p>
+                            <a class="card-link text-site float-right" href="#">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-4 mx-auto mb-5">
+                    <div class="card my-3 levitate">
+                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <div class="card-body">
+                            <h5 class="card-title">Pão Árabe</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
+                            <p class="card-text">Pão Árabe 80g.</p>
+                            <a class="card-link text-site float-right" href="#">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+
 
     </section>
 
