--- a/index.html
+++ b/index.html
@@ -138,47 +138,15 @@
         <!-- Curiosities -->
         <div id="curiosities" class="col-12 mx-auto-my-5-py-5">
 
+            <!-- Text -->
+            <div class="col-12 col-md-6 mr-auto my-5 ">
+                <h6 class="card-subtitle mb-2 text-muted">CURIOSIDADES</h6>
+                <h2 class="card-title"><strong>Saiba as melhores curiosidades sobre a vida culinária.</strong></h2>
+            </div>
+
             <div class="row mx-auto">
 
-                <div class="col-md-4 hoverzoom mx-auto my-2">
-                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
-                    <div class="retina">
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
-                            temporibus,
-                            repellat? Placeat nihil itaque culpa eu.</p>
-                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4 hoverzoom mx-auto my-2">
-                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
-                    <div class="retina">
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
-                            temporibus,
-                            repellat? Placeat nihil itaque culpa eu.</p>
-                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4 hoverzoom mx-auto my-2">
-                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
-                    <div class="retina">
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
-                            temporibus,
-                            repellat? Placeat nihil itaque culpa eu.</p>
-                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4 hoverzoom mx-auto my-2">
-                    <img src="images/novo_experimento_2.png" alt="Hover Zoom CSS3" />
-                    <div class="retina">
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit,
-                            temporibus,
-                            repellat? Placeat nihil itaque culpa eu.</p>
-                        <a class="btn text-white my-3 px-5 py-3 bg-site " href="#">Saiba mais</a>
-                    </div>
-                </div>
+               
 
             </div>
 
