Atualização de conteúdo e remoção de hr

--- a/cardapio.html
+++ b/cardapio.html
@@ -41,7 +41,7 @@
 
 <body>
 
-    <section id="presentation" class="d-block size-page">
+    <section id="presentation" class="d-block size-page pb-5">
 
         <!-- Perfil and Navbar-->
         <div id="perfilNavbar" class="row col-12 d-flex">
@@ -77,29 +77,13 @@
 
             </nav>
 
-            <hr class="d-sm-none col-12 bg-white">
-
         </div>
 
-        <!-- About -->
-        <div id="about" class="col-11 mx-auto my-5 py-5">
-
-            <div class="row">
-
-                <!-- Image -->
-                <div class="col-12 col-md-5 mx-auto mt-auto mb-3">
-                    <img class="col-inner rounded shadow-sm" src="images/novo_experimento_2.png" alt="croissant_story">
-                </div>
-
-                <!-- Text -->
-                <div class="col-12 col-md-6 ml-auto my-auto">
-                    <h2 class="card-title text-site"><strong>Cardápio</strong></h2>
-                    <p class="card-text text-white">Vendemos em Kits. O limite mínimo de peças varia por "Kit",
-                        <strong>Não</strong> temos limite máximo de peças.</p>
-                </div>
-
-            </div>
-
+        <!-- Title -->
+        <div id="title" class="d-block col-10 row col-10 mx-auto my-5">
+            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white"><strong>Cardápio</strong>
+            </h1>
+            <h1 class="d-sm-none col-10 mx-auto text-center text-white"><strong>Cardápio</strong></h1>
         </div>
 
     </section>
@@ -113,11 +97,11 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <img class="card-img-top" src="images/croissant.png">
                         <div class="card-body">
-                            <h5 class="card-title">Pão Árabe</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
-                            <p class="card-text">Pão Árabe 80g.</p>
+                            <h5 class="card-title">Kit 5 Croissants</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 15,00</h6>
+                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
@@ -125,11 +109,11 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <img class="card-img-top" src="images/pain_au_chocolat.png">
                         <div class="card-body">
-                            <h5 class="card-title">Pão Árabe</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
-                            <p class="card-text">Pão Árabe 80g.</p>
+                            <h5 class="card-title">Kit 5 Pain au chocolat</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 25,00</h6>
+                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
@@ -137,23 +121,35 @@
 
                 <div class="col-sm-12 col-md-4 mx-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <img class="card-img-top" src="images/pao_italiano_2.png">
                         <div class="card-body">
-                            <h5 class="card-title">Pão Árabe</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
-                            <p class="card-text">Pão Árabe 80g.</p>
+                            <h5 class="card-title">Pão Italiano</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 10,00</h6>
+                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-md-4 mx-auto mb-5">
+                <div class="col-sm-12 col-md-4 ml-auto mb-5">
                     <div class="card my-3 levitate">
-                        <img class="card-img-top" src="images/pao_arabe.png">
+                        <img class="card-img-top" src="images/pao_arabe_2.png">
                         <div class="card-body">
-                            <h5 class="card-title">Pão Árabe</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 00,00</h6>
-                            <p class="card-text">Pão Árabe 80g.</p>
+                            <h5 class="card-title">Kit 8 Pães Árabes</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 12,00</h6>
+                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
+                            <a class="card-link text-site float-right" href="#">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-4 mr-auto mb-5">
+                    <div class="card my-3 levitate">
+                        <img class="card-img-top" src="images/novo_experimento_2.png">
+                        <div class="card-body">
+                            <h5 class="card-title">Pão Semi-integral castanhas do pará</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 14,25</h6>
+                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
