Atualização de conteúdo, espaçamento e criação de rodapé

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div id="carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/croissant_aberto.png" alt="First slide">
+                    <img class="d-block" src="images/croissant_aberto.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/pain_au_chocolat.png" alt="Second slide">
+                    <img class="d-block" src="images/pain_au_chocolat.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/novo_experimento.png" alt="Third slide">
+                    <img class="d-block" src="images/novo_experimento.png" alt="Third slide">
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-link-site" href="#">Curiosidades</a>
-
+                        </li>
                     </ul>
                 </div>
 
@@ -108,7 +108,7 @@
     <section id="content">
 
         <!-- About -->
-        <div id="about" class="col-11 mx-auto my-5 py-5">
+        <div id="about" class="col-11 col-md-10 mx-auto my-5 py-5">
 
             <div class="row">
 
@@ -134,7 +134,7 @@
         </div>
 
         <!-- Curiosities -->
-        <div id="curiosities" class="col-12 mx-auto-my-5-py-5">
+        <div id="curiosities" class="col-11 col-md-10 mx-auto my-5-py-5">
 
             <!-- Text -->
             <div class="col-12 col-md-6 mr-auto my-5 ">
@@ -144,13 +144,105 @@
 
             <div class="row mx-auto">
 
-               
+
 
             </div>
 
         </div>
 
     </section>
+
+    <footer class="pt-5 pb-2">
+
+        <!-- Informations -->
+        <div class="row col-11 col-md-10 mx-auto">
+
+            <!-- Informations -->
+            <div class="d-block col-md-4 mx-auto my-3">
+
+                <div class="d-flex">
+                    <div class="d-flex rounded-circle text-center bg-pink-site">
+                        <a class="m-auto" href=""><i class="fab fa-instagram text-white fa-1.5x"></i></a>
+                    </div>
+                    <div class="d-flex rounded-circle text-center bg-site ml-2">
+                        <a class="m-auto" href=""><i class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
+                    </div>
+                </div>
+
+                <div class="text-left my-3 text-white">
+                    <p>Edf. Barroco, Apt 302.
+                        <br>
+                        Rua Manoel Barreto, nº 67. Graça.
+                        <br>
+                        Salvador/Bahia/Brasil.
+                        <br>
+                        CEP: 40.150-360.
+                    </p>
+                </div>
+
+            </div>
+
+            <!-- Menu -->
+            <div class="col-md-4 mx-auto my-3">
+                <div class="d-block">
+
+                    <h3 class="text-white">Menu</h3>
+
+                    <div class="my-1">
+                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Home</a>
+                    </div>
+                    <div class="my-1">
+                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Sobre</a>
+                    </div>
+                    <div class="my-1">
+                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Cardápio</a>
+                    </div>
+                    <div class="my-1">
+                        <a class="text-secondary" href=""><i class="fas fa-arrow-right fa-1x pr-2"></i>Curiosidades</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Buttons -->
+            <div class="d-block col-md-4 mx-auto my-3 py-4">
+
+                <div class="row my-3 mx-auto">
+                    <a class="col-12 btn bg-site text-white py-2" href="tel:71999020336"><i
+                            class="fas fa-phone-alt pr-3"></i>Ligue
+                        agora:
+                        (71) 9 99020336</a>
+                </div>
+
+                <div class="row my-3 mx-auto">
+                    <a class="col-12 btn bg-site text-white py-2"
+                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !"><i
+                            class="fab fa-whatsapp pr-3"></i>Entre em contato</a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- Creddits -->
+        <div class="row col-11 col-md-10 mx-auto mt-5">
+
+            <div class="col-12">
+                <hr class="bg-white">
+            </div>
+
+            <div class="col-12 text-center text-white mt-2">
+                <blockquote>
+                    <p>&copy 2020 Todos os direitos reservados.</p>
+                    <footer class="blockquote-footer text-white">By <cite><a class="text-primary" target=""
+                                href="https://www.messias.gq">Messias
+                                Nunesmaia</a></cite></footer>
+                </blockquote>
+            </div>
+
+        </div>
+
+    </footer>
 
 </body>
 
