Atualização de textos

--- a/cardapio.html
+++ b/cardapio.html
@@ -101,7 +101,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Kit 5 Croissants</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 15,00</h6>
-                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
+                            <p class="card-text">Croissant amanteigado feito com farinha de trigo, manteiga extra (em
+                                tablete). Crocante por fora macio por dentro. 45g.</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
@@ -113,7 +114,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Kit 5 Pain au chocolat</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 25,00</h6>
-                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
+                            <p class="card-text">Pain au chocolat tem como base masse folheada, com tabletes de
+                                chocolate derretido por dentro. 75g</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
@@ -125,7 +127,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Pão Italiano</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 10,00</h6>
-                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
+                            <p class="card-text">Pão italiano feito com farinha de trigo e óleo de oliva extra-virgem.
+                                Cortes artesanais. 530g</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
@@ -137,7 +140,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Kit 8 Pães Árabes</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 12,00</h6>
-                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
+                            <p class="card-text">Pão árabe leve, saudável e macio feito com óleo de oliva e
+                                <strong>sem</strong> açúcar. 66g.</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
@@ -149,7 +153,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Pão Semi-integral castanhas do pará</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 14,25</h6>
-                            <p class="card-text">Um beve exemplo de descrição do item vendido.</p>
+                            <p class="card-text">Pão semi-integral feito com farinha integral e aveia. Recheado com
+                                castanhas do pará e uvas-passas. 330g</p>
                             <a class="card-link text-site float-right" href="#">Comprar</a>
                         </div>
                     </div>
